2002-10-02  Dom Lachowicz <doml@appligent.com>

	* rsvg-path.c (*): Remove VERBOSE statements
	* rsvg.c (*): Remove VERBOSE statements
	(rsvg_pixbuf_from_file_with_size_data): New FN for parsing through SVG files. Optionally Gnome-VFS aware (no configure joo-joo yet)
	(rsvg_pixbuf_from_file_*): use above function
	(rsvg_text_handler_characters): fix segfault, handle <tspan> to a large degree
	(rsvg_text_handler_end): ditto
	
2002-10-02  Dom Lachowicz <doml@appligent.com>

	* rsvg.c (rsvg_parse_style_args): handle dashoffset and dasharray
	(state_finalize): support dashes
	(state_clone): ditto
	(render_bpath): ditto
	
	* TODO: update to reflect work done
	
2002-10-01  Dom Lachowicz <doml@appligent.com>

	* TODO: update

	* rsvg.c (): lay some framework for stroke-dash parameters
	
2002-10-01  jacob berkman  <jacob@ximian.com>

	* rsvg-css.c (rsvg_css_parse_normalized_length): fix to build with
	a C compiler

2002-10-01  Dom Lachowicz <doml@appligent.com>

	* rsvg-css.c (rsvg_css_parse_color): Handle all 146 of svg's named colors. Please someone check this for correctness
	
2002-10-01  Dom Lachowicz <doml@appligent.com>

	* rsvg.c (gradient_stop): Handle % gradient stop offsets
	
2002-10-01  Dom Lachowicz <doml@appligent.com>

	* rsvg-css.c (rsvg_css_parse_length): handle %, em units now. ex can easily be handled once we have a way to get the font's XHeight
	(rsvg_css_parse_normalized_length): updated for above ^^^
	
	* rsvg.c (rsvg_handle_set_dpi): new function for setting the DPI
	(macro) RSVG_DPI: assume default of 90 DPI instead of 72
	(rsvg_viewport_percentage): new fn for calculating percentages relative to viewports
	(*): update to use new CSS length routines
	(rsvg_start_text): handle -x and -y values for text offsets
	
2002-10-01  Dom Lachowicz <doml@appligent.com>

	* rsvg.c (*): Make drawing functions handle % widths, heights too
	Use parse_normalized_length for font sizes as well
	
	* rsvg-css.[ch] (rsvg_css_parse_fontsize): kill function
	